# REPAIR

./: .gitattributes  .gitignore  ELDER_BUGFIXES.md  ELDER_GIT_COMMIT.md  ELDER_INTEGRATION.md  ELDER_SAVE_GUIDE.md  EXPERIMENT_VERIFICATION.md  FULL_COMPARISON_GUIDE.md  ICLR_REBUTTAL_EXPERIMENT_PLAN.md  LARGE_SCALE_EXPERIMENTS_GUIDE.md  QUICK_START_REBUTTAL.md  README.md  RECIPE_INTEGRATION_GUIDE.md  RECIPE_N100_GUIDE.md  comparison_report.md  convert_data.py  convert_data_to_melo.py  debug_elder_cpu.py  demo.py  edit_act.txt  elder_bugfixes.patch  implementation_plan.md  inspect_model.py  pyproject.toml  rebuttal_summary.md  requirements.txt  run_batch_experiments.sh  run_chained_experiments.sh  run_cleanup.sh  run_cleanup_v2.sh  run_comparison.py  run_elder.py  run_elder_retry.sh  run_final.sh  run_full_comparison.sh  run_grace_retry.sh  run_grace_wise_comparison.sh  run_large_scale_experiments.sh  run_rebuttal_experiments.sh  run_rebuttal_priority_experiments.sh  (+5 more)
examples/: edit_act.txt  run_ablation_heterogeneous.py  run_cost_analysis.py  run_grace_editing.py  run_melo_baseline.py  run_melo_baseline_fixed.py  run_wise_editing.py  run_wise_editing.sh  run_wise_editing_wiki.py  run_zsre_llama2.py  selected_layer_recoder.json  temp.pkl  test.py  training_examples.py
hparams/: qwen2.5-7b-fixed.yaml
logs/: activation_scores.txt  results.json
outputs_comparison/: FT_cost.json  FT_hallucination_cost.json  FT_hallucination_results.json  FT_medical_cost.json  FT_medical_results.json  FT_mental_health_cost.json  FT_mental_health_results.json  FT_results.json  (+22 more)
(+80 files in other folders)
